# is-by_pro

./: .gitignore  Cargo.toml  Dockerfile  PAYPAL.env  README.md  fix_pin.py  healthcheck.sh  monolith_main.rs  output.html  patch_search_posts.py  patch_search_posts_html.py  render_projects_mobile_template.txt  restore_main.py  scratch.py  scratch.rs  test_imgur  test_render  test_rumble  test_rumble2
scripts/: start-is-by_pro.sh  stop-is-by_pro.sh
src/: auth.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs  paypal.rs  render.rs  utils.rs
src/lib/: github_callback.rs  lib.rs  lib.rs-example
src/routes/: api.rs  mod.rs  pages.rs  sse.rs
systemd/: is-by_pro.service  mysql-backup.service  mysql-backup.timer
templates/: dm_inbox.html  dm_inbox_mobile.html  edit_post.html  edit_profile.html  embed_post.html  index.html  profile.html  profile_mobile.html  project_search_results.html  project_search_results_mobile.html  projects.html  projects_mobile.html  search_posts.html  search_posts_mobile.html  single_post.html  single_post_mobile.html  user_search_results_mobile.html  user_search_section.html  user_search_section_mobile.html  war_room.html  war_room_mobile.html
tests/: test_push.rs
tests_scratch/: Cargo.toml
tests_scratch/src/: main.rs
webroot/: advertise.html  app.webmanifest  imgur-test.html  mobile.html  mobile_dashboard.html  mobile_pwa.html  privacy.html  robots.txt  sitemap.xml  sw.js  test_imgur.rs  test_push.html  test_render.rs  test_rumble.rs  test_rumble2.rs  tos.html
webroot/css/: is-by.css  is-by_mobile.css
webroot/images/: Death_Angel-Ad-555x111.xcf
webroot/js/: is-by_mobile_app.js  is-by_user.js
