[package]
name = "is-by_pro"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.13.0", features = ["rustls-0_23"] }
actix-files = "0.6"
actix-cors = "0.7"
actix-multipart = "0.7"
# 'runtime-tokio' matches Actix's internal runtime
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "macros" ] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
aes-gcm = "0.10.3"
tera = "1"
